--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cycler==0.12.1
 fonttools==4.43.1
 kiwisolver==1.4.5
 matplotlib
-numpy==1.26.1
+numpy
 packaging==23.2
 Pillow==10.1.0
 pyparsing==3.1.1
