Add: Unipolar RZ (#18)
* Add: Unipolar RZ

* add decoding function for unipolar rz

* update signal class

* update encoding schemes with new updated signals

* fix format

* fix pylint

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,8 @@
 [MASTER]
 good-names=data-communication
+ignore=test.py,main.py
+init-hook='import sys; sys.path.append(".")'
+
+[FORMAT]
+max-line-length=150
+
