--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-matplotlib==3.9.2
+matplotlib
 mccabe==0.7.0
 mdurl==0.1.2
 narwhals==1.6.2
