--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,53 @@
+altair==5.4.1
+astroid==3.2.4
+attrs==24.2.0
+blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
 contourpy==1.1.1
 cycler==0.12.1
+dill==0.3.8
 fonttools==4.43.1
+gitdb==4.0.11
+GitPython==3.1.43
+idna==3.8
+isort==5.13.2
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib
+mccabe==0.7.0
+mdurl==0.1.2
+narwhals==1.6.2
 numpy
 packaging==23.2
+pandas==2.2.2
 Pillow==10.1.0
+platformdirs==4.2.2
+protobuf==5.28.0
+pyarrow==17.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+pylint==3.2.7
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2024.1
+referencing==0.35.1
+requests==2.32.3
+rich==13.8.0
+rpds-py==0.20.0
 six==1.16.0
-pylint
+smmap==5.0.1
+streamlit==1.38.0
+tenacity==8.5.0
+toml==0.10.2
+tomlkit==0.13.2
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.1
+urllib3==2.2.2
